boot-kata/ingress/echo-ingress.yaml
# kubectl create ns app
# kubectl -n app create deployment echo --image=ealen/echo-server
# kubectl -n app expose deployment echo --port=80 --target-port=80
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: echo
  namespace: app
spec:
  ingressClassName: nginx
  rules:
  - host: echo.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: echo
            port: 
              number: 80
