boot-kata/ingress/grafana-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kube-prometheus-stack-grafana
  namespace: infra
spec:
  ingressClassName: "nginx"
  rules:
  - host: ax-grafana.com
    http:
      paths:
      - path: /
        pathType: Prefix 
        backend:
          service:
            name: kube-prometheus-stack-grafana
            port: 
              number: 80
